# d2b-wlterm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: check.yml
crates/wlterm-cli/: Cargo.toml
crates/wlterm-cli/src/: main.rs
crates/wlterm-cli/tests/: cli.rs  native_ipc.rs
crates/wlterm-core/: Cargo.toml
crates/wlterm-core/src/: friendly_name.rs  lib.rs
crates/wlterm-d2b/: Cargo.toml
crates/wlterm-d2b/src/: lib.rs
crates/wlterm-d2b/tests/fixtures/toolkit-v0.2.0/: first-class-local-vm-list-response.json  local-vm-list-response.json  unsafe-local-list-response.json
crates/wlterm-ui/: Cargo.toml
crates/wlterm-ui/src/: lib.rs
crates/wlterm-waybar/: Cargo.toml
crates/wlterm-waybar/src/: lib.rs
docs/explanation/: design.md
docs/how-to/: use-home-manager.md
docs/reference/: cli.md  configuration.md  presentation-model.md
nix/: home-manager.nix
