[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.78"
repository = "https://github.com/vicondoa/d2b-wlterm"

[workspace.dependencies]
wlterm-core = { path = "crates/wlterm-core" }
wlterm-d2b = { path = "crates/wlterm-d2b" }
wlterm-waybar = { path = "crates/wlterm-waybar" }
wlterm-ui = { path = "crates/wlterm-ui" }
d2b-client = { path = "../d2b-toolkit/crates/d2b-client", version = "=0.2.0" }
d2b-toolkit-core = { path = "../d2b-toolkit/crates/d2b-toolkit-core", version = "=0.2.0" }
futures = "0.3"
petname = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[workspace.metadata.d2b-toolkit]
version = "0.2.0"
tag = "v0.2.0"
rev = "fde6af8b842718e7150f5056d4eba73093d4ad77"
