[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.94"
repository = "https://github.com/vicondoa/d2b-wlterm"

[workspace.dependencies]
wlterm-core = { path = "crates/wlterm-core" }
wlterm-d2b = { path = "crates/wlterm-d2b" }
wlterm-waybar = { path = "crates/wlterm-waybar" }
wlterm-ui = { path = "crates/wlterm-ui" }
d2b-client-toolkit = { path = "../d2b-client-toolkit/crates/d2b-client-toolkit", version = "=2.0.0" }
petname = "2.0"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[workspace.metadata.d2b-client-toolkit]
version = "2.0.0"
revision = "800c2878533f600d8f085b3d2aafcddb970232b2"
d2b-source-revision = "4018d9c9652bd826c2e6a9abccdcdcafb832d944"
d2b-source-fingerprint = "c2c99bdd77ba66948fce81161dcc3efde608eefefb96f28fa934c9f58d96d838"
source-inventory-sha256 = "2aaef697cc53abc8757a3593352cd5bd1d3f0d3f2031c6a2967f92afa5e74d97"
