[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.94"
repository = "https://github.com/vicondoa/d2b-wlterm"

[workspace.dependencies]
wlterm-core = { path = "crates/wlterm-core" }
wlterm-d2b = { path = "crates/wlterm-d2b" }
wlterm-waybar = { path = "crates/wlterm-waybar" }
wlterm-ui = { path = "crates/wlterm-ui" }
d2b-client-toolkit = { path = "../d2b-client-toolkit/crates/d2b-client-toolkit", version = "=2.0.0", features = ["host-socket"] }
nix = { version = "0.29", default-features = false, features = ["socket", "user"] }
protobuf = "3.7"
tokio = { version = "1", features = ["rt", "time"] }
petname = "2.0"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[workspace.metadata.d2b-client-toolkit]
version = "2.0.0"
revision = "3d6b75d47c8df66c1722ea324d64334a127d43ec"
d2b-source-revision = "9dc902243cdd7aba7ef269988b96f0aae6e037da"
d2b-source-fingerprint = "5a20cef3a64281df819eeb76bdfe385999755479b467b559653011582fb9c043"
source-inventory-sha256 = "35c33c2e23e1b9f03b5abc3bbca2d3320e38c42dfc7aceb7e3476d28210cde8c"
