[package]
name = "wlterm-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "d2b-wlterm"
path = "src/main.rs"

[dependencies]
futures.workspace = true
wlterm-core.workspace = true
wlterm-d2b.workspace = true
wlterm-waybar.workspace = true
wlterm-ui.workspace = true
toml.workspace = true

[dev-dependencies]
d2b-toolkit-core.workspace = true
nix = { version = "0.29", default-features = false, features = ["socket"] }
serde.workspace = true
serde_json.workspace = true
