[package]
name = "wlterm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "d2b-wlterm"
path = "src/main.rs"

[dependencies]
wlterm-core.workspace = true
wlterm-d2b.workspace = true
wlterm-waybar.workspace = true
wlterm-ui.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
