[package]
name = "wlterm-d2b"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wlterm-core.workspace = true

# TODO(d2b-toolkit): prefer a local path dependency when the sibling toolkit
# repository exists, for example:
# d2b-toolkit = { path = "../../../d2b-toolkit/crates/d2b-toolkit" }
