[package]
name = "wlterm-d2b"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
d2b-client.workspace = true
d2b-toolkit-core.workspace = true
futures.workspace = true
sha2.workspace = true
wlterm-core.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
