[package]
name = "wlterm-d2b"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
d2b-client-toolkit.workspace = true
nix.workspace = true
protobuf.workspace = true
tokio.workspace = true
wlterm-core.workspace = true
